--- a/cluster.ini
+++ b/cluster.ini
@@ -1,7 +1,7 @@
 ; Here is all the server configs you will ever want to change
 [NETWORK]
 ; DO change the name and description please!
-cluster_name = Another docker-dst-server
+cluster_name = abctuitui
 cluster_description = This is the default server config for docker-dst-server project. Check out https://github.com/Jamesits/docker-dst-server for running a dedicated server in Docker!
 cluster_password =
 offline_cluster = false
@@ -13,8 +13,8 @@ autosaver_enabled = true
 
 [GAMEPLAY]
 game_mode = endless
-max_players = 64
-pvp = true
+max_players = 4
+pvp = false
 pause_when_empty = true
 vote_kick_enabled = false
 
